Fixed the mobile nav z-index, For the Nav close button

--- a/css/queries.css
+++ b/css/queries.css
@@ -48,14 +48,14 @@
 @media (max-width: 51em) {
   /* Mobile view */
   .main-nav {
-    z-index: 99999;
+    z-index: 2;
     background-color: rgba(255, 255, 255, 0.6);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
     right: 0;
-    width: 50vh;
+    width: 100%;
     height: 100vh;
     transform: translateX(100%);
     padding: 10rem 0;
@@ -103,10 +103,11 @@
   }
 
   .nav-open .icon-mobile-nav[name="close-outline"] {
+    position: relative;
+    z-index: 9999;
     border: 2px solid #3cb371;
     padding: 1rem;
     border-radius: 50%;
-
     display: block;
   }
 
@@ -170,11 +171,6 @@
 /* *************************** */
 
 @media (max-width: 40em) {
-  /* HEADER */
-  .main-nav {
-    width: 30vh;
-  }
-
   .main-footer {
     flex-direction: column;
     align-items: center;
